tests/baselines/reference/accessorWithRestParam(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
accessorWithRestParam.ts(2,11): error TS1053: A 'set' accessor cannot have rest parameter.
accessorWithRestParam.ts(3,18): error TS1053: A 'set' accessor cannot have rest parameter.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== accessorWithRestParam.ts (2 errors) ====
    class C {
        set X(...v) { }
              ~~~
!!! error TS1053: A 'set' accessor cannot have rest parameter.
        static set X(...v2) { }
                     ~~~
!!! error TS1053: A 'set' accessor cannot have rest parameter.
    }